src/snapshots/transmute__xml__tests__struct_field_access.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">Point</ident>
      <ident id="ident:1">x</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">y</ident>
      <ident id="ident:4">len</ident>
      <ident id="ident:5">p</ident>
      <ident id="ident:6">add</ident>
      <ident id="ident:7">div</ident>
      <ident id="ident:8">eq</ident>
      <ident id="ident:9">ge</ident>
      <ident id="ident:10">gt</ident>
      <ident id="ident:11">le</ident>
      <ident id="ident:12">lt</ident>
      <ident id="ident:13">mul</ident>
      <ident id="ident:14">neg</ident>
      <ident id="ident:15">neq</ident>
      <ident id="ident:16">sub</ident>
      <ident id="ident:17">boolean</ident>
      <ident id="ident:18">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
      <type id="type:4">
        <struct stmt-ref="stmt:0">
          <field ident-ref="ident:1" type-ref="type:1" />
          <field ident-ref="ident:3" type-ref="type:1" />
        </struct>
      </type>
      <type id="type:5">
        <function />
      </type>
    </types>
    <stmt id="stmt:0" line="2" column="13" start="13" len="37">
      <struct>
        <identifier ref="ident:0" line="2" column="20" start="20" len="5">Point</identifier>
        <fields>
          <field id="stmt:0:0" line="2" column="28" start="28" len="9">
            <name ident-ref="ident:1" line="2" column="28" start="28" len="1">x</name>
            <type ident-ref="ident:2" type-ref="type:1" line="2" column="31" start="31" len="6">number</type>
          </field>
          <field id="stmt:0:1" line="2" column="39" start="39" len="9">
            <name ident-ref="ident:3" line="2" column="39" start="39" len="1">y</name>
            <type ident-ref="ident:2" type-ref="type:1" line="2" column="42" start="42" len="6">number</type>
          </field>
        </fields>
      </struct>
    </stmt>
    <stmt id="stmt:2" line="3" column="13" start="63" len="56">
      <fn>
        <identifier ident-ref="ident:4" line="3" column="17" start="67" len="3">len</identifier>
        <parameters>
          <parameter id="stmt:2:0" type-ref="type:4" line="3" column="21" start="71" len="8">
            <name ident-ref="ident:5" line="3" column="21" start="71" len="1">p</name>
            <type ident-ref="ident:0" line="3" column="24" start="74" len="5">Point</type>
          </parameter>
        </parameters>
        <body line="3" column="33" start="83" len="36">
          <expr id="expr:3" type-ref="type:1" line="3" column="33" start="83" len="36">
            <block>
              <stmt id="stmt:1" line="4" column="17" start="101" len="4">
                <expr id="expr:2" type-ref="type:1" line="4" column="17" start="101" len="3">
                  <access line="4" column="17" start="101" len="3">
                    <expr id="expr:0" type-ref="type:4" line="4" column="17" start="101" len="1">
                      <identifier-ref id="ident-ref:0" ident-ref="ident:5" target-id="stmt:2:0">p</identifier-ref>
                    </expr>
                    <field ident-ref="ident:1" type-ref="type:1" line="4" column="19" start="103" len="1">x</field>
                  </access>
                </expr>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
