src/snapshots/transmute__xml__tests__type_of_struct.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">Point</ident>
      <ident id="ident:1">x</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">y</ident>
      <ident id="ident:4">Segment</ident>
      <ident id="ident:5">from</ident>
      <ident id="ident:6">to</ident>
      <ident id="ident:7">len</ident>
      <ident id="ident:8">seg</ident>
      <ident id="ident:9">add</ident>
      <ident id="ident:10">div</ident>
      <ident id="ident:11">eq</ident>
      <ident id="ident:12">ge</ident>
      <ident id="ident:13">gt</ident>
      <ident id="ident:14">le</ident>
      <ident id="ident:15">lt</ident>
      <ident id="ident:16">mul</ident>
      <ident id="ident:17">neg</ident>
      <ident id="ident:18">neq</ident>
      <ident id="ident:19">sub</ident>
      <ident id="ident:20">boolean</ident>
      <ident id="ident:21">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
      <type id="type:4">
        <struct stmt-ref="stmt:0">
          <field ident-ref="ident:1" type-ref="type:1" />
          <field ident-ref="ident:3" type-ref="type:1" />
        </struct>
      </type>
      <type id="type:5">
        <struct stmt-ref="stmt:1">
          <field ident-ref="ident:5" type-ref="type:4" />
          <field ident-ref="ident:6" type-ref="type:4" />
        </struct>
      </type>
      <type id="type:6">
        <function />
      </type>
    </types>
    <stmt id="stmt:0" line="2" column="13" start="13" len="37">
      <struct>
        <identifier ref="ident:0" line="2" column="20" start="20" len="5">Point</identifier>
        <fields>
          <field id="stmt:0:0" line="2" column="28" start="28" len="9">
            <name ident-ref="ident:1" line="2" column="28" start="28" len="1">x</name>
            <type ident-ref="ident:2" type-ref="type:1" line="2" column="31" start="31" len="6">number</type>
          </field>
          <field id="stmt:0:1" line="2" column="39" start="39" len="9">
            <name ident-ref="ident:3" line="2" column="39" start="39" len="1">y</name>
            <type ident-ref="ident:2" type-ref="type:1" line="2" column="42" start="42" len="6">number</type>
          </field>
        </fields>
      </struct>
    </stmt>
    <stmt id="stmt:1" line="3" column="13" start="63" len="41">
      <struct>
        <identifier ref="ident:4" line="3" column="20" start="70" len="7">Segment</identifier>
        <fields>
          <field id="stmt:1:0" line="3" column="30" start="80" len="11">
            <name ident-ref="ident:5" line="3" column="30" start="80" len="4">from</name>
            <type ident-ref="ident:0" type-ref="type:4" line="3" column="36" start="86" len="5">Point</type>
          </field>
          <field id="stmt:1:1" line="3" column="43" start="93" len="9">
            <name ident-ref="ident:6" line="3" column="43" start="93" len="2">to</name>
            <type ident-ref="ident:0" type-ref="type:4" line="3" column="47" start="97" len="5">Point</type>
          </field>
        </fields>
      </struct>
    </stmt>
    <stmt id="stmt:2" line="4" column="13" start="117" len="26">
      <fn>
        <identifier ident-ref="ident:7" line="4" column="17" start="121" len="3">len</identifier>
        <parameters>
          <parameter id="stmt:2:0" type-ref="type:5" line="4" column="21" start="125" len="12">
            <name ident-ref="ident:8" line="4" column="21" start="125" len="3">seg</name>
            <type ident-ref="ident:4" line="4" column="26" start="130" len="7">Segment</type>
          </parameter>
        </parameters>
        <body line="4" column="37" start="141" len="2">
          <expr id="expr:0" type-ref="type:3" line="4" column="37" start="141" len="2">
            <block />
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
