src/snapshots/transmute__xml__tests__write_expr.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">add</ident>
      <ident id="ident:1">div</ident>
      <ident id="ident:2">eq</ident>
      <ident id="ident:3">ge</ident>
      <ident id="ident:4">gt</ident>
      <ident id="ident:5">le</ident>
      <ident id="ident:6">lt</ident>
      <ident id="ident:7">mul</ident>
      <ident id="ident:8">neg</ident>
      <ident id="ident:9">neq</ident>
      <ident id="ident:10">sub</ident>
      <ident id="ident:11">boolean</ident>
      <ident id="ident:12">number</ident>
      <ident id="ident:13">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
    </types>
    <stmt id="stmt:0" line="1" column="1" start="0" len="7">
      <expr id="expr:2" type-ref="type:1" line="1" column="1" start="0" len="6">
        <call line="1" column="1" start="0" len="6" ident-ref="ident:0" name="add" target-id="native:add:number:number:number">
          <parameters>
            <parameter>
              <expr id="expr:0" type-ref="type:1" line="1" column="1" start="0" len="2">
                <number>40</number>
              </expr>
            </parameter>
            <parameter>
              <expr id="expr:1" type-ref="type:1" line="1" column="6" start="5" len="1">
                <number>2</number>
              </expr>
            </parameter>
          </parameters>
        </call>
      </expr>
    </stmt>
  </ast>
</unit>
